--- a/.github/workflows/lint-fmt-core.yml
+++ b/.github/workflows/lint-fmt-core.yml
@@ -50,7 +50,7 @@ jobs:
               key: 'all'
             }
           - {
-              args: '--no-default-features --features ayatana-appindicator',
+              args: '--no-default-features --features ayatana-tray',
               key: 'no-default'
             }
           - { args: '--features custom-protocol', key: 'custom-protocol' }
