--- a/core/tauri/Cargo.toml
+++ b/core/tauri/Cargo.toml
@@ -40,7 +40,7 @@ targets = [
 ]
 
 [package.metadata.cargo-udeps.ignore]
-normal = [ "attohttpc" ]
+normal = [ "attohttpc", "reqwest" ]
 
 [dependencies]
 serde_json = { version = "1.0", features = [ "raw_value" ] }
