--- a/tooling/cli/templates/plugin/with-api/.github/workflows/covector-version-or-publish.yml
+++ b/tooling/cli/templates/plugin/with-api/.github/workflows/covector-version-or-publish.yml
@@ -17,10 +17,15 @@ jobs:
         with:
           node-version: 12
           registry-url: 'https://registry.npmjs.org'
+
+      - name: cargo login
+        run: cargo login ${{ secrets.CRATE_TOKEN }}
+
       - name: git config
         run: |
           git config --global user.name "${{ github.event.pusher.name }}"
           git config --global user.email "${{ github.event.pusher.email }}"
+
       - name: covector version-or-publish
         uses: jbolda/covector/packages/action@covector-v0
         id: covector
@@ -28,6 +33,7 @@ jobs:
           token: ${{ secrets.GITHUB_TOKEN }}
           command: 'version-or-publish'
           createRelease: true
+
       - name: Create Pull Request With Versions Bumped
         if: steps.covector.outputs.commandRan == 'version'
         uses: tauri-apps/create-pull-request@v3.4.1
