--- a/.github/workflows/test-cli-js.yml
+++ b/.github/workflows/test-cli-js.yml
@@ -13,7 +13,7 @@ on:
     paths:
       - '.github/workflows/test-cli-js.yml'
       # currently cli.js only tests the template
-      - 'tooling/cli/templates/app'
+      - 'tooling/cli/templates/app/**'
 
 env:
   RUST_BACKTRACE: 1
