--- a/examples/api/src-tauri/Cargo.toml
+++ b/examples/api/src-tauri/Cargo.toml
@@ -8,7 +8,7 @@ license = "Apache-2.0 OR MIT"
 
 [lib]
 name = "api_lib"
-crate-type = ["staticlib", "cdylib", "lib"]
+crate-type = ["staticlib", "cdylib", "rlib"]
 
 [build-dependencies]
 tauri-build = { path = "../../../crates/tauri-build", features = [
