--- a/package.json
+++ b/package.json
@@ -25,5 +25,10 @@
   "devDependencies": {
     "prettier": "^3.3.3"
   },
-  "packageManager": "pnpm@9.9.0"
+  "packageManager": "pnpm@9.9.0",
+  "pnpm": {
+    "overrides": {
+      "rollup@>=4.0.0 <4.22.4": ">=4.22.4"
+    }
+  }
 }
