--- a/.github/workflows/test-core.yml
+++ b/.github/workflows/test-core.yml
@@ -37,35 +37,35 @@ jobs:
           - {
               target: x86_64-pc-windows-msvc,
               os: windows-latest,
-              toolchain: '1.78.0',
+              toolchain: '1.77.2',
               cross: false,
               command: 'test'
             }
           - {
               target: x86_64-unknown-linux-gnu,
               os: ubuntu-latest,
-              toolchain: '1.78.0',
+              toolchain: '1.77.2',
               cross: false,
               command: 'test'
             }
           - {
               target: aarch64-apple-darwin,
               os: macos-14,
-              toolchain: '1.78.0',
+              toolchain: '1.77.2',
               cross: false,
               command: 'test'
             }
           - {
               target: aarch64-apple-ios,
               os: macos-latest,
-              toolchain: '1.78.0',
+              toolchain: '1.77.2',
               cross: false,
               command: 'build'
             }
           - {
               target: aarch64-linux-android,
               os: ubuntu-latest,
-              toolchain: '1.78.0',
+              toolchain: '1.77.2',
               cross: true,
               command: 'build'
             }
@@ -87,6 +87,16 @@ jobs:
         run: |
           sudo apt-get update
           sudo apt-get install -y webkit2gtk-4.1 libxdo-dev libayatana-appindicator3-dev
+
+      - name: downgrade crates with MSRV conflict
+        run: |
+          cargo update -p ravif --precise 0.11.5
+          cargo update -p aws-config --precise 1.5.5
+          cargo update -p aws-sdk-ssooidc --precise 1.40.0
+          cargo update -p aws-sdk-s3 --precise 1.46.0
+          cargo update -p aws-sdk-sts --precise 1.39.0
+          cargo update -p aws-sdk-sso --precise 1.39.0
+          cargo update -p bitstream-io --precise 2.3.0
 
       - uses: Swatinem/rust-cache@v2
         with:
