--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
   "packageManager": "pnpm@9.9.0",
   "pnpm": {
     "overrides": {
-      "rollup@>=4.0.0 <4.22.4": ">=4.22.4"
+      "rollup@>=4.0.0 <4.22.4": ">=4.22.4",
+      "cookie@<0.7.0": ">=0.7.0"
     }
   }
 }
