--- a/crates/tauri-runtime-wry/Cargo.toml
+++ b/crates/tauri-runtime-wry/Cargo.toml
@@ -17,7 +17,7 @@ rustc-args = ["--cfg", "docsrs"]
 rustdoc-args = ["--cfg", "docsrs"]
 
 [dependencies]
-wry = { git = "https://github.com/tauri-apps/wry", branch = "dev", default-features = false, features = [
+wry = { version = "0.46", default-features = false, features = [
   "drag-drop",
   "protocol",
   "os-webview",
