--- a/.github/workflows/covector-version-or-publish-v1.yml
+++ b/.github/workflows/covector-version-or-publish-v1.yml
@@ -126,12 +126,13 @@ jobs:
           cargo update -p tokio-stream --precise 0.1.14
           cargo update -p tokio-util --precise 0.7.10
           cargo update -p os_pipe --precise 1.1.5
-          cargo update -p syn:2.0.77 --precise 2.0.67
+          cargo update -p syn:2.0.79 --precise 2.0.67
           cargo update -p derive_more --precise 0.99.17
           cargo update -p native-tls --precise 0.2.11
           cargo update -p ppv-lite86 --precise 0.2.17
           cargo update -p xml-rs --precise 0.8.20
           cargo update -p mac-notification-sys --precise 0.6.1
+          cargo update -p security-framework-sys --precise 2.11.1
 
       - name: Downgrade crates with MSRV conflict (bundler)
         # This is for the bundler but since cli depends on the bundler we enable it for the cli too
